fixed quiz bird photo sizes to allow better spacing on quiz pages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -126,8 +126,9 @@ h4 {
     text-align: center;
     display: none;
     > div > #Frame > #birdImage {
+        height: 20rem;
         border-radius: 1rem;
-        box-shadow: 0 1.2rem 1.7rem rgba(0, 0, 0, 0.3),
+        box-shadow: 0 1.2rem 1rem rgba(0, 0, 0, 0.3),
             0 1rem 1rem rgba(0, 0, 0, 0.25);
     }
 
@@ -241,8 +242,8 @@ h4 {
                 background-color: transparent;
                 overflow: hidden;
                 border: 4px solid #ccc;
-                height: 16rem;
-                width: 16rem;
+                height: 15rem;
+                width: 15rem;
                 margin: 0;
                 padding: 0;
                 background-position: center;
